--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-native-amap3d",
-  "version": "1.1.1",
+  "name": "react-native-amap3d-gd",
+  "version": "0.0.2",
   "description": "react-native 高德地图组件，支持 Android + iOS",
-  "author": "Qiu Xiang <i@7c00.cc>",
+  "author": "LinCP",
   "license": "MIT",
   "keywords": [
     "react-native",
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/qiuxiang/react-native-amap3d"
+    "url": "https://github.com/chrislincp/react-native-amap3d-gd"
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
